# catalog-classifier

./: .gitignore  AGENTS.md  README.md  docker-compose.yml
services/api/: README.md  pyproject.toml
services/api/migrations/: env.py
services/api/migrations/versions/: 0001_upload_foundation.py  0002_processing_jobs.py  0003_image_derivatives.py  0004_pgvector_foundation.py  0005_perceptual_hashes_embeddings.py  0006_category_schema.py  0007_grouping_review_schema.py  0008_image_rejection.py  0009_group_category_prefill.py
services/api/src/catalog_api/: __init__.py  approved_group_exports.py  approved_image_exports.py  category_suggestion_providers.py  database.py  embedding_vectors.py  group_category_reconciliation.py  grouping.py  image_embedding_providers.py  image_hashes.py  image_processing.py  image_uploads.py  local_batches.py  main.py  models.py  multimodal_comparison.py  multimodal_comparison_providers.py  processing_jobs.py  processing_orchestration.py  processing_storage.py  review_approvals.py  (+4 more)
services/api/tests/: conftest.py  test_approved_group_exports.py  test_approved_image_exports.py  test_categories.py  test_group_category_reconciliation.py  test_grouping.py  test_image_rejection.py  test_local_batches.py  test_migrations.py  test_multimodal_comparison.py  test_processing_jobs.py  test_processing_orchestration.py  test_review_approvals.py  test_review_edits.py  test_review_groups.py  test_upload_batches.py  test_upload_finalization.py  test_upload_handshake.py  test_upload_registration.py  test_upload_retries.py  test_upload_storage.py
(+39 files in other folders)
