[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "catalog-classifier-api"
version = "0.1.0"
description = "Backend API for the catalog image classification tool"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.136.3,<0.137",
  "pillow>=12.2,<13",
  "python-multipart>=0.0.20,<0.1",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<1",
  "pytest>=9,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]

